Bug 237861 - Moving rotated widgets from desktop to panel is broken
Summary: Moving rotated widgets from desktop to panel is broken
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: containment-panel (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-16 19:56 UTC by Nikita Churaev
Modified: 2010-05-17 14:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Churaev 2010-05-16 19:56:39 UTC
Version:            (using KDE 4.4.3)
OS:                Linux
Installed from:    Archlinux Packages

Steps to reproduce:
  1. Add trashcan to desktop
  2. Roatate it
  3. Move to panel

Actual results:
  Trashcan is still rotated and located outside the panel

Expected results:
  Trashcan has normal orientation and is on the panel
Comment 1 Beat Wolf 2010-05-17 11:43:33 UTC
patch fixing the issue:
http://reviewboard.kde.org/r/3999/
Comment 2 Artur Souza (MoRpHeUz) 2010-05-17 14:34:49 UTC
SVN commit 1127712 by asouza:

Reset the angle of an applet when moved to a panel

This way, applets that were rotated in Plasma::Planar are not
rotated anymore when moved to form factor Plasma::Horizontal ||
Plasma::Vertical.

BUG:237861


 M  +7 -0      applet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1127712