Reset the angle of an applet when moved to a panel

This way, applets that were rotated in Plasma::Planar are not
rotated anymore when moved to form factor Plasma::Horizontal ||
Plasma::Vertical.

BUG:237861

svn path=/trunk/KDE/kdelibs/; revision=1127712